--- a/FMS/FMS.Forms/FMS.Forms.csproj
+++ b/FMS/FMS.Forms/FMS.Forms.csproj
@@ -17,10 +17,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.Portable.Compatibility" Version="1.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+    <PackageReference Include="FreshMvvm" Version="2.2.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Properties\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="icons\mac\cell-EntryCell-16.png" />
@@ -305,5 +307,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FMS.Core\FMS.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="FMS.FormsPage.xaml" />
   </ItemGroup>
 </Project>
